@@ -6481,6 +6481,8 @@ private:
     <tr><td>maxExclusive</td><td>Integer and floating-point types.</td></tr>
     <tr><td>maxInclusive</td><td>Integer and floating-point types.</td></tr>
 
+    <tr><td>fractionDigits</td><td><code>decimal</code></td></tr>
+
     <tr><th colspan="2">Datatypes</th></tr>
 
     <tr><td>byte</td><td></td></tr>
