@@ -63,6 +63,7 @@
   <decimal>10.5</decimal>
   <decimal>50.0</decimal>
   <decimal>99.5</decimal>
+  <decimal>99.55</decimal>
 
   <string1>12345</string1>
 
