@@ -98,6 +98,21 @@ namespace CXX
             }
           }
         }
+
+        if (ub.is_a<SemanticGraph::Fundamental::Decimal> ())
+        {
+          for (Restricts::FacetIterator i (r.facet_begin ());
+               i != r.facet_end (); ++i)
+          {
+            if (!ctx.validation)
+              continue;
+
+            if (i->first == L"fractionDigits")
+            {
+              os << "this->_fraction_digits_facet (" << i->second << ");";
+            }
+          }
+        }
       }
 
       struct Enumeration: Traversal::Enumeration, Context
